<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:alpha="0.35"
    android:id="@+id/ar">

    <RelativeLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:minWidth="200dp"
        android:padding="5dp"
        android:elevation="2dp"
        android:layout_centerInParent="true">
        <EditText
            android:id="@+id/et_login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/login_hint"
            />
        <EditText
            android:id="@+id/et_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_login_login"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_login_pwd"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/login_button"/>
    </RelativeLayout>
</RelativeLayout>