<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/euro_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/euro_sign"/>
        <EditText
            android:id="@+id/transaction_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@id/euro_sign"
            android:layout_toStartOf="@id/euro_sign"
            android:layout_marginRight="5dp"
            android:inputType="numberDecimal"
            android:hint="@string/add_transaction_value"/>

    </RelativeLayout>
    <CheckBox
        android:id="@+id/cb_isIncome_addTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_income"
        android:layout_marginLeft="10dp"
        />

    <include layout="@layout/tag_flow_layout"
        android:id="@+id/flow_tags"/>
    <Button
        android:id="@+id/bt_add_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add a tag"/>
    
</LinearLayout>